--- a/public/style.css
+++ b/public/style.css
@@ -525,8 +525,8 @@ video {
   position: relative;
 }
 
-.bottom-2 {
-  bottom: 0.5rem;
+.bottom-3 {
+  bottom: 0.75rem;
 }
 
 .right-2 {
@@ -549,60 +549,16 @@ video {
   bottom: 0px;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
-.bottom-12 {
-  bottom: 3rem;
-}
-
-.bottom-14 {
-  bottom: 3.5rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
-.bottom-3 {
-  bottom: 0.75rem;
-}
-
-.z-50 {
-  z-index: 50;
+.z-10 {
+  z-index: 10;
 }
 
 .z-30 {
   z-index: 30;
 }
 
-.z-\[51\] {
-  z-index: 51;
-}
-
-.z-\[551\] {
-  z-index: 551;
-}
-
-.z-\[551px\] {
-  z-index: 551px;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
-.z-\[50\] {
+.z-50 {
   z-index: 50;
-}
-
-.z-\[55\] {
-  z-index: 55;
-}
-
-.z-\[5885\] {
-  z-index: 5885;
 }
 
 .m-2 {
@@ -623,12 +579,8 @@ video {
   margin-top: 0.25rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .ml-3 {
@@ -641,6 +593,10 @@ video {
 
 .mt-12 {
   margin-top: 3rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-0 {
@@ -663,28 +619,8 @@ video {
   margin-top: 1.5rem;
 }
 
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.mr-16 {
-  margin-right: 4rem;
-}
-
-.-mr-16 {
-  margin-right: -4rem;
-}
-
-.-ml-16 {
-  margin-left: -4rem;
-}
-
-.-ml-14 {
-  margin-left: -3.5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .box-border {
@@ -697,6 +633,10 @@ video {
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -739,16 +679,44 @@ video {
   height: 90px;
 }
 
+.h-\[32px\] {
+  height: 32px;
+}
+
+.h-\[42px\] {
+  height: 42px;
+}
+
+.h-\[62\] {
+  height: 62;
+}
+
+.h-\[62px\] {
+  height: 62px;
+}
+
+.h-\[48\] {
+  height: 48;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
+.h-\[38\] {
+  height: 38;
+}
+
+.h-\[38px\] {
+  height: 38px;
+}
+
 .max-h-\[650px\] {
   max-height: 650px;
 }
 
 .w-9 {
   width: 2.25rem;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-\[27px\] {
@@ -767,6 +735,10 @@ video {
   width: 2rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .w-1\/4 {
   width: 25%;
 }
@@ -779,6 +751,10 @@ video {
   width: 260px;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -787,8 +763,36 @@ video {
   width: 90px;
 }
 
-.grow {
-  flex-grow: 1;
+.w-\[32px\] {
+  width: 32px;
+}
+
+.w-\[42px\] {
+  width: 42px;
+}
+
+.w-\[62\] {
+  width: 62;
+}
+
+.w-\[62px\] {
+  width: 62px;
+}
+
+.w-\[48\] {
+  width: 48;
+}
+
+.w-\[48px\] {
+  width: 48px;
+}
+
+.w-\[38\] {
+  width: 38;
+}
+
+.w-\[38px\] {
+  width: 38px;
 }
 
 .scale-0 {
@@ -856,10 +860,6 @@ video {
   justify-content: space-around;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-1 {
   gap: 0.25rem;
 }
@@ -868,8 +868,16 @@ video {
   gap: 1.25rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .overflow-hidden {
@@ -945,18 +953,14 @@ video {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
-.bg-cyan-200 {
+.bg-\[\#222\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(165 243 252 / var(--tw-bg-opacity));
+  background-color: rgb(34 34 34 / var(--tw-bg-opacity));
 }
 
-.bg-current {
-  background-color: currentColor;
-}
-
-.bg-black {
+.bg-red-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -1039,16 +1043,8 @@ video {
   padding-left: 2rem;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
-}
-
-.pr-14 {
-  padding-right: 3.5rem;
+.pr-0 {
+  padding-right: 0px;
 }
 
 .text-left {
@@ -1288,7 +1284,7 @@ video {
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
-  font-size: 39px;
+  font-size: 35px;
   letter-spacing: 4px;
   word-spacing: 2px;
   color: rgb(255, 255, 255);
@@ -1381,6 +1377,69 @@ video {
   background-repeat: no-repeat;
 }
 
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:top-0::after {
+  content: var(--tw-content);
+  top: 0px;
+}
+
+.after\:-z-20::after {
+  content: var(--tw-content);
+  z-index: -20;
+}
+
+.after\:h-full::after {
+  content: var(--tw-content);
+  height: 100%;
+}
+
+.after\:w-full::after {
+  content: var(--tw-content);
+  width: 100%;
+}
+
+.after\:bg-hero::after {
+  content: var(--tw-content);
+  background-image: url('wave.svg');
+}
+
+.after\:bg-cover::after {
+  content: var(--tw-content);
+  background-size: cover;
+}
+
+.after\:bg-bottom::after {
+  content: var(--tw-content);
+  background-position: bottom;
+}
+
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.visited\:bg-green-400:visited {
+  background-color: rgb(74 222 128 );
+}
+
+.visited\:bg-green-500:visited {
+  background-color: rgb(34 197 94 );
+}
+
+.focus-within\:bg-green-400:focus-within {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+
+.focus-within\:bg-green-500:focus-within {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
 .hover\:rotate-3:hover {
   --tw-rotate: 3deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1441,24 +1500,9 @@ video {
   color: rgb(115 115 115 / var(--tw-text-opacity));
 }
 
-.hover\:text-slate-100:hover {
-  --tw-text-opacity: 1;
-  color: rgb(241 245 249 / var(--tw-text-opacity));
-}
-
 .hover\:text-slate-200:hover {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
-}
-
-.hover\:text-slate-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
-}
-
-.hover\:text-slate-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 
 .hover\:transition:hover {
@@ -1492,9 +1536,19 @@ video {
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
+.focus-visible\:bg-green-500:focus-visible {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
 .active\:bg-green-500:active {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.active\:bg-green-400:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
 .group:hover .group-hover\:translate-y-6 {
@@ -1552,6 +1606,10 @@ video {
     margin-bottom: 1.5rem;
   }
 
+  .sm\:mt-16 {
+    margin-top: 4rem;
+  }
+
   .sm\:inline {
     display: inline;
   }
@@ -1594,10 +1652,6 @@ video {
 
   .sm\:flex-row {
     flex-direction: row;
-  }
-
-  .sm\:flex-nowrap {
-    flex-wrap: nowrap;
   }
 
   .sm\:items-center {
@@ -1659,6 +1713,10 @@ video {
   .sm\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+  }
+
+  .sm\:pr-14 {
+    padding-right: 3.5rem;
   }
 
   .sm\:text-left {
